# Mint-8

./: CMakeLists.txt  README.md
Mint8/: CMakeLists.txt  Mint8.cpp  Mint8.h  config.h  main.cpp  mint8.cpp  mint8.h
