# CMakeList.txt : CMake project for Mint8, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Mint8 "mint8.cpp" "mint8.h"   "config.h" "main.cpp")

# TODO: Add tests and install targets if needed.
